Control-Check-Done

--- a/Acme-Conference/src/main/webapp/views/conference/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages.properties
@@ -69,4 +69,4 @@ conference.cantUpdate.NoUnderReviewSubmissions = You can't update the status of 
 
 
 
-conference.folets = Folets
+conference.reckons = Reckons
