--- a/Acme-Conference/src/main/webapp/views/dashboard/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/dashboard/messages.properties
@@ -17,3 +17,6 @@ dashboard.daysPerConferenceStats = Days per conference stats
 dashboard.conferencesPerCategoryStats = Conferences per category stats
 dashboard.commentsPerConferenceStats = Comments per conference stats
 dashboard.commentsPerActivityStats = Comments per activity stats
+dashboard.reckonsPerConferenceStats = Reckons per conference stats
+dashboard.ratioPublished = Ratio of published reckons versus total number of reckons
+dashboard.ratioUnpublished = Ratio of unpublished reckons versus total number of reckons
