--- a/Acme-Conference/src/main/webapp/views/dashboard/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/dashboard/messages_es.properties
@@ -17,3 +17,6 @@ dashboard.daysPerConferenceStats = Analisis de días de las conferencias
 dashboard.conferencesPerCategoryStats = Analisis de conferencias por categoría
 dashboard.commentsPerConferenceStats = Analisis de comentarios por conferencia
 dashboard.commentsPerActivityStats = Analisis de los comentarios por actividad
+dashboard.reckonsPerConferenceStats = Analisis de los reckons por conferencia
+dashboard.ratioPublished = Razon de reckons publicados versus el numero total de reckons
+dashboard.ratioUnpublished = Razon de reckons no publicados versus el numero total de reckons
