Topic issue mended
Now, there are two base Topics that cannot be deleted neither modified. DECISION and BASIC

--- a/Acme-Conference/src/main/webapp/views/topic/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/topic/messages.properties
@@ -16,3 +16,6 @@ topic.edit = Edit
 topic.delete = Delete
 topic.display = Display
 topic.commit.error = Cannot commit operation
+
+topic.notEditable = This Topic cannot be edited
+topic.notDeletable = This Topic cannot be deleted
