--- a/Acme-Conference/src/main/webapp/views/topic/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/topic/messages_es.properties
@@ -16,3 +16,6 @@ topic.edit = Editar
 topic.delete = Eliminar
 topic.display = Mostrar
 topic.commit.error = No se ha podido realizar la operación
+
+topic.notEditable = Este Topic no puede ser editado
+topic.notDeletable = Este Topic no puede ser eliminado
