--- a/Acme-Conference/src/main/webapp/views/dashboard/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/dashboard/messages.properties
@@ -17,3 +17,6 @@ dashboard.daysPerConferenceStats = Days per conference stats
 dashboard.conferencesPerCategoryStats = Conferences per category stats
 dashboard.commentsPerConferenceStats = Comments per conference stats
 dashboard.commentsPerActivityStats = Comments per activity stats
+dashboard.publishedVastesPerConferenceStats = Published vastes per conference stats
+dashboard.ratioOfPublishedVastesVSTotalVastes = Ratio of published vastes vs the total number of vastes
+dashboard.ratioOfUnpublishedVastesVSTotalVastes = Ratio of unpublished vastes vs the total number of vastes
