--- a/Acme-Conference/src/main/webapp/views/dashboard/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/dashboard/messages_es.properties
@@ -17,3 +17,6 @@ dashboard.daysPerConferenceStats = Analisis de días de las conferencias
 dashboard.conferencesPerCategoryStats = Analisis de conferencias por categoría
 dashboard.commentsPerConferenceStats = Analisis de comentarios por conferencia
 dashboard.commentsPerActivityStats = Analisis de los comentarios por actividad
+dashboard.publishedVastesPerConferenceStats = Análisis de los vastes por conferencia
+dashboard.ratioOfPublishedVastesVSTotalVastes = Ratio de los vastes publicados vs el número total de vastes
+dashboard.ratioOfUnpublishedVastesVSTotalVastes = Ratio de los vastes no publicados vs el número total de vastes
