Security and create admin corrected

--- a/Acme-Conference/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages.properties
@@ -19,6 +19,8 @@ master.page.signUp = Sign up
 master.page.profile = Profile
 master.page.editProfile = Edit profile
 
+master.page.actor.signUp.administrator = Create an administrator
+
 master.page.administrator.confParams = Configuration Parameters
 master.page.confParamsEdit = Edit Configuration Parameters
 master.page.administrator.topics = Topics
