--- a/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
@@ -19,6 +19,8 @@ master.page.signUp = Registrarse
 master.page.profile = Perfil
 master.page.editProfile = Editar perfil
 
+master.page.actor.signUp.administrator = Crear un administrador
+
 master.page.administrator.confParams = Parámetros de configuración del sistema
 master.page.confParamsEdit = Editar parámetros de configuración
 master.page.administrator.topics = Temas
