Control check Rai reworked

--- a/Acme-Conference/src/main/webapp/views/reckon/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/reckon/messages.properties
@@ -21,8 +21,9 @@ reckon.commit.error		= Commit error
 reckon.yes                 = Yes
 reckon.no					= No
 reckon.title = Title 
+reckon.administrator = Administrator
 
 reckon.publicationMomentNull  = The reckon hasn't got a publication moment because isn't already in final mode
-reckon.cantDeleteFinalMode = You can't delete the reckon because is in final mode
-reckon.cantEditFinalMode = You can't edit the reckon because is in final mode 
+reckon.cantDelete = You can't delete the reckon because is in final mode or you are not the author
+reckon.cantEdit = You can't edit the reckon because is in final mode or you are not the author
 reckon.commit.error = Commit Error
