--- a/Acme-Conference/src/main/webapp/views/reckon/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/reckon/messages_es.properties
@@ -21,8 +21,9 @@ reckon.commit.error		= Error al hacer commit
 reckon.yes                 = Sí
 reckon.no					= No
 reckon.title = Título
+reckon.administrator = Administrador
 
 reckon.publicationMomentNull  = La reckon no posee aún una fecha de publicación porque no está en modo final
-reckon.cantDeleteFinalMode = No puedes borrar la reckon porque está en modo final
-reckon.cantEditFinalMode = No puedes editar la reckon porque está en modo final
+reckon.cantDelete = No puedes borrar la reckon porque está en modo final o no eres su autor
+reckon.cantEdit = No puedes editar la reckon porque está en modo final o no eres su autor
 reckon.commit.error = Error de transacción
