--- a/Acme-Conference/src/main/webapp/views/reckon/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/reckon/messages_es.properties
@@ -6,7 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-reckon.ticker = Ticker
+reckon.tracer = Tracer
 reckon.publicationMoment = Fecha de publicación
 reckon.body = Cuerpo
 reckon.picture = Imagen
