Control Check Fran

--- a/Acme-Conference/src/main/webapp/views/vaste/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/vaste/messages.properties
@@ -21,8 +21,12 @@ vaste.commit.error		= Commit error
 vaste.yes                 = Yes
 vaste.no					= No
 vaste.title = Title 
+vaste.administrator = Administrator
+
 
 vaste.publicationMomentNull  = The vaste hasn't got a publication moment because isn't already in final mode
 vaste.cantDeleteFinalMode = You can't delete the vaste because is in final mode
 vaste.cantEditFinalMode = You can't edit the vaste because is in final mode 
 vaste.commit.error = Commit Error
+vaste.cantEdit =  You can't edit the vaste because is in final mode  or you're not it's creator
+vaste.cantDelete =  You can't delete the vaste because is in final mode  or you're not it's creator
