--- a/Acme-Conference/src/main/webapp/views/vaste/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/vaste/messages_es.properties
@@ -21,8 +21,10 @@ vaste.commit.error		= Error al hacer commit
 vaste.yes                 = Sí
 vaste.no					= No
 vaste.title = Título
+vaste.administrator = Administrador
 
 vaste.publicationMomentNull  = La vaste no posee aún una fecha de publicación porque no está en modo final
 vaste.cantDeleteFinalMode = No puedes borrar la vaste porque está en modo final
 vaste.cantEditFinalMode = No puedes editar la vaste porque está en modo final
 vaste.commit.error = Error de transacción
+vaste.notCreator = No puedes modificar el vaste porque no eres su creador.
