--- a/Acme-Conference/src/main/webapp/views/category/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/category/messages.properties
@@ -11,6 +11,7 @@ category.name = Name
 category.nameEs = Name in Spanish
 category.CONFERENCE = Father of all category
 category.father = Father
+category.father.name = Father
 
 category.edit = Edit
 category.delete = Delete
@@ -20,3 +21,4 @@ category.notDeletable = Not deletable
 category.create = Add a category
 category.save = Save
 category.cancel = Cancel
+category.commit.error = Cannot commit operation
