--- a/Acme-Conference/src/main/webapp/views/category/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/category/messages_es.properties
@@ -11,6 +11,7 @@ category.name = Nombre en Inglés
 category.nameEs = Nombre en Español
 category.CONFERENCE = Padre de todas las categorías
 category.father = Padre
+category.father.name = Padre
 
 category.edit = Editar
 category.delete = Eliminar
@@ -20,3 +21,4 @@ category.notDeletable = No eliminable
 category.create = Añadir una categoria
 category.save = Guardar
 category.cancel = Cancelar
+category.commit.error = No se ha podido completar la operación
